# q

./: .containerignore  Cargo.toml  Containerfile  LICENSE  README.md  test-prompt.md
.github/workflows/: container.yml  e2e.yml  rust-ci.yml
docs/: design.md
src/: cli.rs  lb.rs  main.rs  partition.rs  server.rs
tests/: e2e_test.rs
