[package]
name = "q"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
qp = { git = "ssh://git@github.com/mumitek/proto", version = "0.1.0" }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"
