[package]
name = "q"
version = "0.1.0"
edition = "2024"

[features]
bench-stress = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
qp = { git = "https://github.com/mumitek/proto.git", version = "0.1.0" }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
rayon = "1.11"
pretty_assertions = "1.4"
tempfile = "3.27"
num_cpus = "1.17"
tracing-test = "0.2"
